// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint.config Merged 1`] = `
{
  "overrides": [
    {
      "files": [
        "**/*.ts",
        "**/*.tsx",
      ],
      "plugins": [
        "@typescript-eslint",
      ],
      "rules": {
        "@typescript-eslint/no-redeclare": [
          "error",
        ],
        "@typescript-eslint/no-shadow": [
          "error",
        ],
        "@typescript-eslint/no-unused-vars": "error",
        "@typescript-eslint/strict-boolean-expressions": [
          "warn",
          {
            "allowNumber": false,
            "allowString": false,
          },
        ],
        "@typescript-eslint/type-annotation-spacing": [
          "warn",
          {
            "after": true,
            "before": false,
            "overrides": {
              "arrow": {
                "after": true,
                "before": true,
              },
            },
          },
        ],
        "jsdoc/no-undefined-types": [
          0,
        ],
        "no-magic-numbers": [
          0,
        ],
        "no-redeclare": [
          0,
        ],
        "no-shadow": [
          0,
        ],
        "no-undef": [
          0,
        ],
        "semi": [
          0,
        ],
      },
    },
    {
      "extends": [
        "plugin:svelte/recommended",
      ],
      "files": [
        "*.svelte",
      ],
      "parser": "svelte-eslint-parser",
      "parserOptions": {
        "parser": "@typescript-eslint/parser",
      },
      "rules": {
        "prefer-const": [
          0,
        ],
      },
    },
  ],
  "parserOptions": {
    "ecmaVersion": 7,
    "extraFileExtensions": [
      ".svelte",
    ],
    "project": "./tsconfig.json",
    "sourceType": "module",
    "warnOnUnsupportedTypeScriptVersion": false,
  },
}
`;

exports[`eslint.config Snapshot 1`] = `
{
  "overrides": [
    {
      "extends": [
        "plugin:svelte/recommended",
      ],
      "files": [
        "*.svelte",
      ],
      "parser": "svelte-eslint-parser",
      "parserOptions": {
        "parser": "@typescript-eslint/parser",
      },
      "rules": {
        "prefer-const": [
          0,
        ],
      },
    },
  ],
  "parserOptions": {
    "extraFileExtensions": [
      ".svelte",
    ],
  },
}
`;
